--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Condensed&display=swap" rel="stylesheet">
-  <title>tom allsop</title>
+  <title>tomasallsop</title>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
         <div id="maincontenttext">
     tomasallsop@gmail.com <br>
     3430502@kabk.nl <br>
-    0640381161 <br>
+    <p>0640381161<p> 
 
 </div>
   </div>
