--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <title>tomasallsop</title>
   <link rel="stylesheet" href="css/layout.css">
+  <link rel="shortcut icon" href="images/orb.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {}
@@ -72,7 +73,7 @@
 
     .img-s90 {
       float: right;
-      }
+    }
 
     .img-s89 {
       float: left;
@@ -2003,7 +2004,7 @@
 
 <body>
   <div id="layer-1" class="welcome layer">
-    hello this is my website
+    3430502@kabk.nl<br>
     tomasallsop@gmail.com
   </div>
   <div class="container">
