--- a/index.html
+++ b/index.html
@@ -303,14 +303,18 @@
 
     <div id="column2">
       <div id="texttest">
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p> <br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
+        <p>The schedule of addiction, drugs, and even escape routes by kids... it was sickening.</p>
+        <p>I know it does not compare to the grace and mercies of the Saviour, but as I have had time to digest all that has been written, I still weep for what has been described.</p>
+        <p>The schedule of addiction, death, life I'm never in the same place twice and right now it's sad, uncomfortable and completely unnerving.</p>
       </div>
       <div id="texttest">
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p> <br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
+        <p>The slow cancellation of the future and the slow death of the present.</p>
+        <p>The slow death of the future. </p>
+        <p>I think we're all going to die alone. </p>
+        <p>We're all going to die alone and that's fine. </p>
+        <p>We can't live for ourselves. </p>
+        <p>The slow cancellation of the future of this country is now underway. </p>
+        <p>When you have a slow, methodical, planned destruction of the future of your country, you will be able to see it coming.</p>
       </div>
 
       <div id="texttest">
@@ -442,7 +446,7 @@
         <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
       </div>
     </div>
-    </div>
+  </div>
 
   </div>
   </div>
