--- a/index.html
+++ b/index.html
@@ -305,6 +305,8 @@
       <div id="texttest">
         <p>The schedule of addiction, drugs, and even escape routes by kids... it was sickening.</p>
         <p>I know it does not compare to the grace and mercies of the Saviour, but as I have had time to digest all that has been written, I still weep for what has been described.</p>
+      </div>
+      <div id="texttest">
         <p>The schedule of addiction, death, life I'm never in the same place twice and right now it's sad, uncomfortable and completely unnerving.</p>
       </div>
       <div id="texttest">
@@ -313,144 +315,42 @@
         <p>I think we're all going to die alone. </p>
         <p>We're all going to die alone and that's fine. </p>
         <p>We can't live for ourselves. </p>
+      </div>
+      <div id="texttest">
         <p>The slow cancellation of the future of this country is now underway. </p>
         <p>When you have a slow, methodical, planned destruction of the future of your country, you will be able to see it coming.</p>
       </div>
 
-      <div id="texttest">
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p> <br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-      </div>
-
-      <div id="texttest">
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p> <br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-      </div>
-
-      <div id="texttest">
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p> <br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-      </div>
-      <div id="texttest">
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p> <br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-      </div>
-
-      <div id="texttest">
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p> <br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-      </div>
-
-      <div id="texttest">
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p> <br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-      </div>
-
-      <div id="texttest">
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p> <br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-      </div>
-      <div id="texttest">
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p> <br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-      </div>
-
-      <div id="texttest">
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p> <br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-      </div>
-
-      <div id="texttest">
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p> <br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-      </div>
     </div>
 
     <div id="column3">
-      <div id="texttest">
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p> <br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-      </div>
-      <div id="texttest">
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p> <br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-      </div>
+      <p>Hyperobjects.</p>
+      <img class="column2image" src="images/image1.png" alt="art image 1">
+      <p>Abandoned weapons range. </p>
+      <img class="column2image" src="images/image2.png" alt="art image 1">
+      <p>Neon origami. </p>
+      <img class="column2image" src="images/image3.png" alt="art image 1">
+      <p>The smell of archaic fuels.</p>
+      <img class="column2image" src="images/image4.png" alt="art image 1">
+      <p>Zombie formalism.</p>
+      <img class="column2image" src="images/image5.png" alt="art image 1">
+      <p>Petro chemical haze.</p>
+      <img class="column2image" src="images/image6.png" alt="art image 1">
+      <p>The spectre of uselessness.</p>
+      <img class="column2image" src="images/image7.png" alt="art image 1">
+      <p>The electronic janitors.</p>
+      <img class="column2image" src="images/image8.png" alt="art image 1">
+      <p>Krieg dem kriege.</p>
+      <img class="column2image" src="images/image9.png" alt="art image 1">
 
-      <div id="texttest">
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p> <br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-      </div>
 
-      <div id="texttest">
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p> <br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-      </div>
 
-      <div id="texttest">
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p> <br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-      </div>
-      <div id="texttest">
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p> <br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-      </div>
-
-      <div id="texttest">
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p> <br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-      </div>
-
-      <div id="texttest">
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p> <br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-      </div>
-
-      <div id="texttest">
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p> <br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-      </div>
-      <div id="texttest">
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p> <br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-      </div>
-
-      <div id="texttest">
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p> <br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-      </div>
-
-      <div id="texttest">
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p> <br>
-        <p>ik kan hier typen wat ik wil en maakt niks uit hopelijk</p><br>
-      </div>
     </div>
   </div>
 
   </div>
   </div>
-  </div>
+
 
   <div id="footer">
     <div id="footercontent">
