--- a/index.html
+++ b/index.html
@@ -325,26 +325,27 @@
 
     <div id="column3">
       <p>Hyperobjects.</p>
-      <img class="column2image" src="images/image1.png" alt="art image 1">
       <p>Abandoned weapons range. </p>
-      <img class="column2image" src="images/image2.png" alt="art image 1">
       <p>Neon origami. </p>
-      <img class="column2image" src="images/image3.png" alt="art image 1">
+      <p>Iron tooled sky.</p>
       <p>The smell of archaic fuels.</p>
-      <img class="column2image" src="images/image4.png" alt="art image 1">
       <p>Zombie formalism.</p>
-      <img class="column2image" src="images/image5.png" alt="art image 1">
+      <p>Screams ignite the oil sky.</p>
       <p>Petro chemical haze.</p>
-      <img class="column2image" src="images/image6.png" alt="art image 1">
       <p>The spectre of uselessness.</p>
-      <img class="column2image" src="images/image7.png" alt="art image 1">
       <p>The electronic janitors.</p>
-      <img class="column2image" src="images/image8.png" alt="art image 1">
       <p>Krieg dem kriege.</p>
-      <img class="column2image" src="images/image9.png" alt="art image 1">
-
-
-
+      <p>Hyperobjects.</p>
+      <p>Abandoned weapons range. </p>
+      <p>Neon origami. </p>
+      <p>Iron tooled sky.</p>
+      <p>The smell of archaic fuels.</p>
+      <p>Zombie formalism.</p>
+      <p>Screams ignite the oil sky.</p>
+      <p>Petro chemical haze.</p>
+      <p>The spectre of uselessness.</p>
+      <p>The electronic janitors.</p>
+      <p>Krieg dem kriege.</p>
     </div>
   </div>
 
