--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
     </div>
 
     <div id="column3">
-      <p>Hyperobjects.</p>
+       <p>Hyperobjects.</p>
       <p>Abandoned weapons range. </p>
       <p>Neon origami. </p>
       <p>Iron tooled sky.</p>
@@ -335,17 +335,12 @@
       <p>The spectre of uselessness.</p>
       <p>The electronic janitors.</p>
       <p>Krieg dem kriege.</p>
-      <p>Hyperobjects.</p>
-      <p>Abandoned weapons range. </p>
-      <p>Neon origami. </p>
-      <p>Iron tooled sky.</p>
-      <p>The smell of archaic fuels.</p>
-      <p>Zombie formalism.</p>
-      <p>Screams ignite the oil sky.</p>
-      <p>Petro chemical haze.</p>
-      <p>The spectre of uselessness.</p>
-      <p>The electronic janitors.</p>
-      <p>Krieg dem kriege.</p>
+      <p>Questioning the recognition.</p>
+      <p>The fluidity of graphite. </p>
+      <p>Urban reflections. </p>
+      <p>Concerning interpretations.</p>
+      <p>Iconoplastic.</p>
+      <p>The Factory war.</p>
     </div>
   </div>
 
