--- a/pages/hyperobjects.html
+++ b/pages/hyperobjects.html
@@ -62,7 +62,7 @@ body {
 
     <div id="column3">
       <p>◢ Links</p>
-      <p><a href="hyperobjects.html" target="_blank">● Hyperobjects </a></p>
+      <p><a href="hyperobjects.html">● Hyperobjects </a></p>
       <p><a href="https://www.youtube.com/watch?v=BMKV3GgBVsk" target="_blank">Abandoned weapons range.</a></p>
       <p><a href="https://www.youtube.com/watch?v=7b922U1_7CM" target="_blank">Neon origami.</a></p>
       <p>Iron tooled sky.</p>
