--- a/pages/hyperobjects.html
+++ b/pages/hyperobjects.html
@@ -61,7 +61,9 @@ body {
           </div>
 
     <div id="column3">
+      <div id="texttest">
       <p>◢ Links</p>
+    </div>
       <p><a href="hyperobjects.html">● Hyperobjects </a></p>
       <p><a href="https://www.youtube.com/watch?v=BMKV3GgBVsk" target="_blank">Abandoned weapons range.</a></p>
       <p><a href="https://www.youtube.com/watch?v=7b922U1_7CM" target="_blank">Neon origami.</a></p>
