--- a/index.html
+++ b/index.html
@@ -304,6 +304,8 @@
     <div id="column2">
           <div id="texttest">
             <p>◢ Texts</p>
+          </div>
+            <div id="texttest">
         <p>◢ The schedule of addiction, drugs, and even escape routes by kids... it was sickening.</p>
         <p>I know it does not compare to the grace and mercies of the Saviour, but as I have had time to digest all that has been written, I still weep for what has been described.</p>
       </div>
@@ -325,7 +327,9 @@
     </div>
 
     <div id="column3">
+        <div id="texttest">
       <p>◢ Links</p>
+    </div>
       <p><a href="pages/hyperobjects.html" target=>Hyperobjects </a></p>
       <p><a href="https://www.youtube.com/watch?v=BMKV3GgBVsk" target="_blank">Abandoned weapons range.</a></p>
       <p><a href="https://www.youtube.com/watch?v=7b922U1_7CM" target="_blank">Neon origami.</a></p>
