--- a/pages/hyperobjects.html
+++ b/pages/hyperobjects.html
@@ -60,30 +60,38 @@ body {
     <div id="column2">
           </div>
 
-    <div id="column3">
-      <div id="texttest">
-      <p>◢ Links</p>
-    </div>
-      <p><a href="hyperobjects.html">● Hyperobjects </a></p>
-      <p><a href="https://www.youtube.com/watch?v=BMKV3GgBVsk" target="_blank">Abandoned weapons range.</a></p>
-      <p><a href="https://www.youtube.com/watch?v=7b922U1_7CM" target="_blank">Neon origami.</a></p>
-      <p>Iron tooled sky.</p>
-      <p>The smell of archaic fuels.</p>
-      <p>Zombie formalism.</p>
-      <p>Screams ignite the oil sky.</p>
-      <p>Petro chemical haze.</p>
-      <p>The spectre of uselessness.</p>
-      <p>The electronic janitors.</p>
-      <p>Krieg dem kriege.</p>
-      <p>Questioning the recognition.</p>
-      <p>The fluidity of graphite. </p>
-      <p>Urban reflections. </p>
-      <p>Concerning interpretations.</p>
-      <p>Iconoplastic.</p>
-      <p>The Factory war.</p>
-    </div>
-  </div>
-
+          <div id="column3">
+              <div id="texttest">
+            <p>◢ Links and phrases</p>
+          </div>
+            <p><a href="hyperobjects.html" target=>● Hyperobjects</a></p>
+            <p><a href="https://www.youtube.com/watch?v=BMKV3GgBVsk" target="_blank">Abandoned weapons range</a></p>
+            <p><a href="https://www.pupuladuplex.com" target="_blank">Concerted heads</a></p>
+            <p><a href="https://www.youtube.com/watch?v=7b922U1_7CM" target="_blank">Neon origami</a></p>
+            <p><a href="https://www.eliotallsop.com" target="_blank">Cyberiad</a></p>
+            <p><a href="https://thoughtmaybe.com/cant-get-you-out-of-my-head/#top" target="_blank">Can't get you out of my head</a></p>
+            <p>The smell of archaic fuels</p>
+            <p>Zombie formalism</p>
+            <p>Screams ignite the oil sky</p>
+            <p>Petro chemical haze</p>
+            <p>The spectre of uselessness</p>
+            <p>The electronic janitors</p>
+            <p>Krieg dem kriege</p>
+            <p>Questioning the recognition</p>
+            <p>The century of the self</p>
+            <p>Body without organs</p>
+            <p>irrevocably bourgeois</p>
+            <p>Iron tooled sky</p>
+            <p>Humane restraints</p>
+            <p>Spinal Catastrophism</p>
+            <p>The fluidity of graphite</p>
+            <p>Urban reflections</p>
+            <p>Concerning interpretations</p>
+            <p>folded, spindled and mutilated</p>
+            <p>Iconoplastic</p>
+            <p>The Factory war</p>
+          </div>
+        </div>
   </div>
   </div>
 
