--- a/index.html
+++ b/index.html
@@ -302,10 +302,7 @@
     </div>
 
     <div id="column2">
-          <div id="texttest">
-            <p>◢ Texts</p>
-          </div>
-            <div id="texttest">
+        <div id="texttest">
         <p>◢ The schedule of addiction, drugs, and even escape routes by kids... it was sickening.</p>
         <p>I know it does not compare to the grace and mercies of the Saviour, but as I have had time to digest all that has been written, I still weep for what has been described.</p>
       </div>
@@ -327,22 +324,24 @@
     </div>
 
     <div id="column3">
-        <div id="texttest">
-      <p>◢ Links and phrases</p>
-    </div>
+      <div id="texttest">
+        <p>◢ Links and phrases</p>
+      </div>
       <p><a href="pages/hyperobjects.html" target=>Hyperobjects </a></p>
-      <p><a href="https://www.youtube.com/watch?v=BMKV3GgBVsk" target="_blank">Abandoned weapons range</a></p>
       <p><a href="https://www.pupuladuplex.com" target="_blank">Concerted heads</a></p>
-      <p><a href="https://www.youtube.com/watch?v=7b922U1_7CM" target="_blank">Neon origami</a></p>
+      <p><a href="https://www.youtube.com/watch?v=ZQQGEce1oyg" target="_blank">The fluidity of graphite</a></p>
+      <p><a href="https://www.youtube.com/shorts/Fe7H2pbRVbM" target="_blank">Concerning interpretations</a></p>
       <p><a href="https://www.eliotallsop.com" target="_blank">Cyberiad</a></p>
+      <p><a href="https://www.youtube.com/watch?v=BMKV3GgBVsk" target="_blank">Abandoned weapons range</a></p>
+      <p><a href="https://www.youtube.com/watch?v=7b922U1_7CM" target="_blank">Neon origami</a></p>
       <p><a href="https://thoughtmaybe.com/cant-get-you-out-of-my-head/#top" target="_blank">Can't get you out of my head</a></p>
+      <p><a href="https://www.widewalls.ch/magazine/zombie-art-formalism" target="_blank">Zombie formalism</a></p>
+      <p><a href="https://issuu.com/samzdat/docs/ernst_friedrich_krieg_dem_kriege__g" target="_blank">Krieg dem kriege</a></p>
       <p>The smell of archaic fuels</p>
-      <p>Zombie formalism</p>
       <p>Screams ignite the oil sky</p>
       <p>Petro chemical haze</p>
       <p>The spectre of uselessness</p>
       <p>The electronic janitors</p>
-      <p>Krieg dem kriege</p>
       <p>Questioning the recognition</p>
       <p>The century of the self</p>
       <p>Body without organs</p>
@@ -350,9 +349,7 @@
       <p>Iron tooled sky</p>
       <p>Humane restraints</p>
       <p>Spinal Catastrophism</p>
-      <p>The fluidity of graphite</p>
       <p>Urban reflections</p>
-      <p>Concerning interpretations</p>
       <p>folded, spindled and mutilated</p>
       <p>Iconoplastic</p>
       <p>The Factory war</p>
