--- a/pages/hyperobjects.html
+++ b/pages/hyperobjects.html
@@ -10,10 +10,14 @@
   <title>hyperobjects</title>
 </head>
 <style>
-body {
-  background: rgb(172,172,172);
-  background: radial-gradient(circle, rgba(172,172,172,1) 0%, rgba(80,80,80,1) 10%, rgba(66,66,66,1) 21%, rgba(91,90,90,1) 53%, rgba(0,0,0,1) 100%);
-}
+  body {
+    background: rgb(172, 172, 172);
+    background: radial-gradient(circle, rgba(172, 172, 172, 1) 0%, rgba(80, 80, 80, 1) 10%, rgba(66, 66, 66, 1) 21%, rgba(91, 90, 90, 1) 53%, rgba(0, 0, 0, 1) 100%);
+  }
+
+  #footer {
+    visibility: hidden;
+  }
 </style>
 
 <body>
@@ -28,70 +32,148 @@ body {
     <div id="imagecolumn">
       <div id="texttest">
         <img class="column2image" src="../images/image1.png" alt="art image 1">
+        <p>Hyperobject 1</p>
         <img class="column2image" src="../images/image2.png" alt="art image 1">
+        <p>Hyperobject 2</p>
         <img class="column2image" src="../images/image3.png" alt="art image 1">
+        <p>Hyperobject 3</p>
         <img class="column2image" src="../images/image4.png" alt="art image 1">
+        <p>Hyperobject 4</p>
         <img class="column2image" src="../images/image5.png" alt="art image 1">
+        <p>Hyperobject 5</p>
         <img class="column2image" src="../images/image6.png" alt="art image 1">
+        <p>Hyperobject 6</p>
         <img class="column2image" src="../images/image7.png" alt="art image 1">
+        <p>Hyperobject 7</p>
         <img class="column2image" src="../images/image8.png" alt="art image 1">
+        <p>Hyperobject 8</p>
         <img class="column2image" src="../images/image9.png" alt="art image 1">
+        <p>Hyperobject 9</p>
         <img class="column2image" src="../images/image10.png" alt="art image 1">
+        <p>Hyperobject 10</p>
         <img class="column2image" src="../images/image11.png" alt="art image 1">
+        <p>Hyperobject 11</p>
         <img class="column2image" src="../images/image12.png" alt="art image 1">
+        <p>Hyperobject 12</p>
         <img class="column2image" src="../images/image13.png" alt="art image 1">
+        <p>Hyperobject 13</p>
         <img class="column2image" src="../images/image14.png" alt="art image 1">
+        <p>Hyperobject 14</p>
         <img class="column2image" src="../images/image15.png" alt="art image 1">
+        <p>Hyperobject 15</p>
         <img class="column2image" src="../images/image16.png" alt="art image 1">
+        <p>Hyperobject 16</p>
         <img class="column2image" src="../images/image17.png" alt="art image 1">
+        <p>Hyperobject 17</p>
         <img class="column2image" src="../images/image18.png" alt="art image 1">
+        <p>Hyperobject 18</p>
         <img class="column2image" src="../images/image19.png" alt="art image 1">
+        <p>Hyperobject 19</p>
         <img class="column2image" src="../images/image20.png" alt="art image 1">
+        <p>Hyperobject 20</p>
         <img class="column2image" src="../images/image21.png" alt="art image 1">
+        <p>Hyperobject 21</p>
         <img class="column2image" src="../images/image22.png" alt="art image 1">
+        <p>Hyperobject 22</p>
         <img class="column2image" src="../images/image23.png" alt="art image 1">
+        <p>Hyperobject 23</p>
         <img class="column2image" src="../images/image24.png" alt="art image 1">
+        <p>Hyperobject 24</p>
         <img class="column2image" src="../images/image25.png" alt="art image 1">
+        <p>Hyperobject 25</p>
         <img class="column2image" src="../images/image26.png" alt="art image 1">
+        <p>Hyperobject 26</p>
         <img class="column2image" src="../images/image27.png" alt="art image 1">
+        <p>Hyperobject 27</p>
       </div>
     </div>
 
     <div id="column2">
-          </div>
+      <div id="texttest">
+        ◢ Bacteria Can’t See Beyond Their Bodies
+      </div>
 
-          <div id="column3">
-              <div id="texttest">
-            <p>◢ Links and phrases</p>
-          </div>
-            <p><a href="hyperobjects.html" target=>● Hyperobjects</a></p>
-            <p><a href="https://www.youtube.com/watch?v=BMKV3GgBVsk" target="_blank">Abandoned weapons range</a></p>
-            <p><a href="https://www.pupuladuplex.com" target="_blank">Concerted heads</a></p>
-            <p><a href="https://www.youtube.com/watch?v=7b922U1_7CM" target="_blank">Neon origami</a></p>
-            <p><a href="https://www.eliotallsop.com" target="_blank">Cyberiad</a></p>
-            <p><a href="https://thoughtmaybe.com/cant-get-you-out-of-my-head/#top" target="_blank">Can't get you out of my head</a></p>
-            <p>The smell of archaic fuels</p>
-            <p>Zombie formalism</p>
-            <p>Screams ignite the oil sky</p>
-            <p>Petro chemical haze</p>
-            <p>The spectre of uselessness</p>
-            <p>The electronic janitors</p>
-            <p>Krieg dem kriege</p>
-            <p>Questioning the recognition</p>
-            <p>The century of the self</p>
-            <p>Body without organs</p>
-            <p>irrevocably bourgeois</p>
-            <p>Iron tooled sky</p>
-            <p>Humane restraints</p>
-            <p>Spinal Catastrophism</p>
-            <p>The fluidity of graphite</p>
-            <p>Urban reflections</p>
-            <p>Concerning interpretations</p>
-            <p>folded, spindled and mutilated</p>
-            <p>Iconoplastic</p>
-            <p>The Factory war</p>
-          </div>
-        </div>
+      <div id="texttest">
+        ◢ Bacteria are invisible to the naked eye.
+      </div>
+
+      <div id="texttest">
+        ◢ They lack any sort of external information gathering capabilities.
+      </div>
+
+      <div id="texttest">
+        ◢ They have no way to perceive anything beyond their bodies.
+      </div>
+
+      <div id="texttest">
+        ◢ You can only see the bacterial colonies on a Petri dish through a microscope.
+      </div>
+
+      <div id="texttest">
+        ◢ The Petri dish is a sort of visual obscura , a device that displays an image within a cube.
+      </div>
+
+      <div id="texttest">
+        ◢ A device that displays an image within a cube. The cube is simply an abstract way of exhibiting images within a sphere, or other four-dimensional space.
+      </div>
+
+      <div id="texttest">
+        ◢ in a ball, or other four-dimensional space. The sphere is simply a three-dimensional representation of a four-dimensional space
+      </div>
+
+      <div id="texttest">
+        ◢ How did the bacteria come to see the Petri dish differently than you do?
+      </div>
+
+      <div id="texttest">
+        ◢ How did the bacteria come to see the Petri dish differently than you do?
+      </div>
+
+      <div id="texttest">
+        ◢ The Petri dish does not exhibit any sort of visual perception.
+      </div>
+
+      <div id="texttest">
+        ◢ The Petri dish is simply the vessel of exposure.
+      </div>
+
+      <div id="texttest">
+        ◢ Nothing is at a different distance from the Petri dish than it is from the bacteria.
+      </div>
+    </div>
+
+    <div id="column3">
+      <div id="texttest">
+        <p>◢ Links and phrases</p>
+      </div>
+      <p><a href="hyperobjects.html" target=>Hyperobjects █</a></p>
+      <p><a href="https://www.pupuladuplex.com" target="_blank">Concerted heads</a></p>
+      <p><a href="https://www.youtube.com/watch?v=ZQQGEce1oyg" target="_blank">The fluidity of graphite</a></p>
+      <p><a href="https://www.youtube.com/shorts/Fe7H2pbRVbM" target="_blank">Concerning interpretations</a></p>
+      <p><a href="https://www.eliotallsop.com" target="_blank">Cyberiad</a></p>
+      <p><a href="https://www.youtube.com/watch?v=BMKV3GgBVsk" target="_blank">Abandoned weapons range</a></p>
+      <p><a href="https://www.youtube.com/watch?v=7b922U1_7CM" target="_blank">Neon origami</a></p>
+      <p><a href="https://thoughtmaybe.com/cant-get-you-out-of-my-head/#top" target="_blank">Can't get you out of my head</a></p>
+      <p><a href="https://www.widewalls.ch/magazine/zombie-art-formalism" target="_blank">Zombie formalism</a></p>
+      <p><a href="https://issuu.com/samzdat/docs/ernst_friedrich_krieg_dem_kriege__g" target="_blank">Krieg dem kriege</a></p>
+      <p>The smell of archaic fuels</p>
+      <p>Screams ignite the oil sky</p>
+      <p>Petro chemical haze</p>
+      <p>The spectre of uselessness</p>
+      <p>The electronic janitors</p>
+      <p>Questioning the recognition</p>
+      <p>The century of the self</p>
+      <p>Body without organs</p>
+      <p>irrevocably bourgeois</p>
+      <p>Iron tooled sky</p>
+      <p>Humane restraints</p>
+      <p>Spinal Catastrophism</p>
+      <p>Urban reflections</p>
+      <p>folded, spindled and mutilated</p>
+      <p>Iconoplastic</p>
+      <p>The Factory war</p>
+    </div>
+  </div>
   </div>
   </div>
 
