--- a/pages/hyperobjects.html
+++ b/pages/hyperobjects.html
@@ -14,10 +14,11 @@
     background: rgb(172, 172, 172);
     background: radial-gradient(circle, rgba(172, 172, 172, 1) 0%, rgba(80, 80, 80, 1) 10%, rgba(66, 66, 66, 1) 21%, rgba(91, 90, 90, 1) 53%, rgba(0, 0, 0, 1) 100%);
   }
-
+  @media only screen and (max-width : 1000px) {
   #footer {
     visibility: hidden;
   }
+}
 </style>
 
 <body>
