--- a/index.html
+++ b/index.html
@@ -358,11 +358,10 @@
 
   </div>
   </div>
-
-
-  <div id="footer">
+  
+      <div id="footer">
     <div id="footercontent">
-      <p>tomasallsop@gmail.com ● 0640381161</p>
+      <p>  <a href="mailto:tomasallsop@gmail.com">tomasallsop@gmail.com </a> ● 0640381161</p>
     </div>
   </div>
 
