--- a/pages/blog.html
+++ b/pages/blog.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="../css/style.css">
   <link rel="shortcut icon" href="images/orb.jpg" />
-  <title>hyperobjects</title>
+  <title>blog</title>
 </head>
 <style>
   body {
