--- a/index.html
+++ b/index.html
@@ -302,7 +302,9 @@
     </div>
 
     <div id="column2">
-        <div id="texttest">
+
+
+          <div id="texttest">
         <p>◢ The schedule of addiction, drugs, and even escape routes by kids... it was sickening.</p>
         <p>I know it does not compare to the grace and mercies of the Saviour, but as I have had time to digest all that has been written, I still weep for what has been described.</p>
       </div>
@@ -320,6 +322,18 @@
         <p>◢ The slow cancellation of the future of this country is now underway. </p>
         <p>When you have a slow, methodical, planned destruction of the future of your country, you will be able to see it coming.</p>
       </div>
+
+      <div id="texttest">
+        <audio controls>
+          <source src="audio/factory.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+        </audio>
+
+        <audio controls>
+          <source src="audio/acidmusic.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+        </audio>
+</div>
 
     </div>
 
@@ -358,10 +372,11 @@
 
   </div>
   </div>
-  
-      <div id="footer">
+
+
+  <div id="footer">
     <div id="footercontent">
-      <p>  <a href="mailto:tomasallsop@gmail.com">tomasallsop@gmail.com </a> ● 0640381161</p>
+      <p> <a href="mailto:tomasallsop@gmail.com">tomasallsop@gmail.com </a> ● 0640381161</p>
     </div>
   </div>
 
