--- a/pages/blog.html
+++ b/pages/blog.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="../css/style.css">
   <link rel="shortcut icon" href="images/orb.jpg" />
-  <title>blog</title>
+  <title>hyperobjects</title>
 </head>
 <style>
   body {
@@ -16,16 +16,20 @@
   }
 
   @media only screen and (max-width : 1000px) {
-  #column2 {
-    height: 40vh;
-  }
-}
+    #column2 {
+      height: 20vh;
+    }
 
-@media only screen and (min-width : 1001px) {
-  #column2 {
-    height: 60vh;
+    #footer {
+      visibility: hidden;
+    }
   }
-}
+
+  @media only screen and (min-width : 1001px) {
+    #column2 {
+      height: 60vh;
+    }
+  }
 </style>
 
 <body>
@@ -39,8 +43,35 @@
   <div id="columns">
     <div id="imagecolumn">
       <div id="texttest">
+
+        <img class="column2image" src="../images/blog/blog1.jpg" alt="art image 1">
+  <p>Johan Maurits 1</p>
+        <img class="column2image" src="../images/blog/blog2.jpg" alt="art image 1">
+  <p>Johan Maurits 2</p>
+        <img class="column2image" src="../images/blog/blog3.jpg" alt="art image 1">
+  <p>Johan Maurits 3</p>
+        <img class="column2image" src="../images/blog/blog4.jpg" alt="art image 1">
+  <p>Johan Maurits 4</p>
+        <img class="column2image" src="../images/blog/blog5.jpg" alt="art image 1">
+  <p>Johan Maurits 5</p>
+        <img class="column2image" src="../images/blog/blog6.jpg" alt="art image 1">
+  <p>Johan Maurits 6</p>
+        <img class="column2image" src="../images/blog/blog7.jpg" alt="art image 1">
+  <p>Johan Maurits 7</p>
+        <img class="column2image" src="../images/blog/blog8.jpg" alt="art image 1">
+  <p>Johan Maurits 8</p>
+        <img class="column2image" src="../images/blog/blog9.jpg" alt="art image 1">
+  <p>Johan Maurits 9</p>
+        <img class="column2image" src="../images/blog/blog10.jpg" alt="art image 1">
+  <p>Johan Maurits 10</p>
+        <img class="column2image" src="../images/blog/blog11.jpg" alt="art image 1">
+          <p>Johan Maurits 11</p>
+      </div>
+    </div>
+    <div id="column3">
+      <div id="texttest">
         <audio controls>
-        <source src="../audio/mauritshuis.mp3" type="audio/mpeg">
+          <source src="../audio/mauritshuis.mp3" type="audio/mpeg">
           Your browser does not support the audio element.
         </audio>
         <p>Walk in impression Mauritshuis.</p>
@@ -48,7 +79,7 @@
 
       <div id="texttest">
         <audio controls>
-        <source src="../audio/3" type="audio/mpeg">
+          <source src="../audio/3" type="audio/mpeg">
           Your browser does not support the audio element.
         </audio>
         <p>Walk in impression Beelden aan Zee. (WIP)</p>
@@ -56,7 +87,7 @@
 
       <div id="texttest">
         <audio controls>
-        <source src="../audio/" type="audio/mpeg">
+          <source src="../audio/" type="audio/mpeg">
           Your browser does not support the audio element.
         </audio>
         <p>Walk in Landart Flevoland. (WIP)</p>
@@ -68,23 +99,31 @@
         ◢ Mauritshuis. (WIP)
       </div>
       <div id="texttest">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </div>
 
       <div id="texttest">
         ◢ Beelden aan Zee. (WIP)
       </div>
       <div id="texttest">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat est velit egestas dui id. Volutpat blandit aliquam etiam erat. Vel turpis nunc eget lorem dolor sed viverra ipsum nunc. Odio aenean sed adipiscing diam. Nunc sed blandit libero volutpat sed cras. Fusce id velit ut tortor pretium viverra. Sodales ut eu sem integer vitae justo eget. Libero justo laoreet sit amet cursus sit amet dictum. Morbi tristique senectus et netus. Facilisi etiam dignissim diam quis. Nunc vel risus commodo viverra. Odio tempor orci dapibus ultrices in iaculis nunc. Ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at augue. Massa tincidunt dui ut ornare lectus sit amet. Sapien eget mi proin sed libero enim. Neque gravida in fermentum et sollicitudin ac orci phasellus.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat est velit egestas dui id. Volutpat blandit aliquam etiam erat. Vel turpis nunc eget lorem dolor sed viverra
+        ipsum nunc. Odio aenean sed adipiscing diam. Nunc sed blandit libero volutpat sed cras. Fusce id velit ut tortor pretium viverra. Sodales ut eu sem integer vitae justo eget. Libero justo laoreet sit amet cursus sit amet dictum. Morbi
+        tristique senectus et netus. Facilisi etiam dignissim diam quis. Nunc vel risus commodo viverra. Odio tempor orci dapibus ultrices in iaculis nunc. Ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at augue. Massa tincidunt dui ut
+        ornare lectus sit amet. Sapien eget mi proin sed libero enim. Neque gravida in fermentum et sollicitudin ac orci phasellus.
       </div>
 
       <div id="texttest">
         ◢ Landart Flevoland. (WIP)
       </div>
       <div id="texttest">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Maecenas ultricies mi eget mauris pharetra et ultrices neque. Dignissim suspendisse in est ante in nibh mauris. Pharetra magna ac placerat vestibulum lectus mauris ultrices. Aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant. Pretium vulputate sapien nec sagittis aliquam malesuada bibendum arcu. Sit amet luctus venenatis lectus magna. Turpis massa tincidunt dui ut. Duis ultricies lacus sed turpis tincidunt id. Tristique magna sit amet purus gravida quis. Ultrices sagittis orci a scelerisque purus. Dolor morbi non arcu risus. Eget est lorem ipsum dolor sit amet consectetur adipiscing elit. Duis at consectetur lorem donec massa sapien faucibus. Nec feugiat in fermentum posuere. Massa eget egestas purus viverra accumsan in nisl nisi. Eget nunc scelerisque viverra mauris. Ipsum consequat nisl vel pretium. Semper risus in hendrerit gravida rutrum quisque. Leo in vitae turpis massa.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Maecenas ultricies mi eget mauris pharetra et ultrices neque. Dignissim suspendisse in est ante in nibh mauris.
+        Pharetra magna ac placerat vestibulum lectus mauris ultrices. Aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant. Pretium vulputate sapien nec sagittis aliquam malesuada bibendum arcu. Sit amet luctus venenatis
+        lectus magna. Turpis massa tincidunt dui ut. Duis ultricies lacus sed turpis tincidunt id. Tristique magna sit amet purus gravida quis. Ultrices sagittis orci a scelerisque purus. Dolor morbi non arcu risus. Eget est lorem ipsum dolor sit
+        amet consectetur adipiscing elit. Duis at consectetur lorem donec massa sapien faucibus. Nec feugiat in fermentum posuere. Massa eget egestas purus viverra accumsan in nisl nisi. Eget nunc scelerisque viverra mauris. Ipsum consequat nisl vel
+        pretium. Semper risus in hendrerit gravida rutrum quisque. Leo in vitae turpis massa.
       </div>
-  </div>
+    </div>
   </div>
 
 
