--- a/pages/blog.html
+++ b/pages/blog.html
@@ -95,34 +95,16 @@
     </div>
 
     <div id="column2">
-      <div id="texttest">
-        ◢ Mauritshuis. (WIP)
-      </div>
-      <div id="texttest">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </div>
 
       <div id="texttest">
-        ◢ Beelden aan Zee. (WIP)
+        ◢ Beelden aan Zee.
       </div>
       <div id="texttest">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat est velit egestas dui id. Volutpat blandit aliquam etiam erat. Vel turpis nunc eget lorem dolor sed viverra
-        ipsum nunc. Odio aenean sed adipiscing diam. Nunc sed blandit libero volutpat sed cras. Fusce id velit ut tortor pretium viverra. Sodales ut eu sem integer vitae justo eget. Libero justo laoreet sit amet cursus sit amet dictum. Morbi
-        tristique senectus et netus. Facilisi etiam dignissim diam quis. Nunc vel risus commodo viverra. Odio tempor orci dapibus ultrices in iaculis nunc. Ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at augue. Massa tincidunt dui ut
-        ornare lectus sit amet. Sapien eget mi proin sed libero enim. Neque gravida in fermentum et sollicitudin ac orci phasellus.
+        Studio aan zee is the public studio of museum Beelden Aan Zee. Led by Johan Tahon, a sculptor who built his studio there for a year, children and grownups can experience and participate in all aspects of sculpture. The room is divided into three pieces. There is the lounge, the workplace and the artist studio (which is divided by a small stage.) In the corner is a video playing (Takes 12:46) where we can see Johan Tahon and the conservator of education, Marlies Nijkamp, talk. The artist talks about how a studio is a space where there is distance to reality and is highly personal. The coffee corner of Studio aan Zee really adds to this thought, where the parents can see their children creating in the studio with the given materials, magic sand, non dryable clay and markers with coloring pages. The studio on its own (I haven’t seen the workshops that are given there) doesn’t compare to the big promises they made in the video. The alleged experimental character of the studio is only shown in a way that it seems like they have no clue of how to let the audience participate on their own.
+
+      Tom, Kuba and I also tried to work there. After we played with the toys displayed, a woman came to clean up the white Ikea tables with a wet cloth. If you want to let the audience participate in the making of a sculpture, then please try to make it inviting and let is know that it’s okay to make a mess. 
       </div>
 
-      <div id="texttest">
-        ◢ Landart Flevoland. (WIP)
-      </div>
-      <div id="texttest">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Maecenas ultricies mi eget mauris pharetra et ultrices neque. Dignissim suspendisse in est ante in nibh mauris.
-        Pharetra magna ac placerat vestibulum lectus mauris ultrices. Aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant. Pretium vulputate sapien nec sagittis aliquam malesuada bibendum arcu. Sit amet luctus venenatis
-        lectus magna. Turpis massa tincidunt dui ut. Duis ultricies lacus sed turpis tincidunt id. Tristique magna sit amet purus gravida quis. Ultrices sagittis orci a scelerisque purus. Dolor morbi non arcu risus. Eget est lorem ipsum dolor sit
-        amet consectetur adipiscing elit. Duis at consectetur lorem donec massa sapien faucibus. Nec feugiat in fermentum posuere. Massa eget egestas purus viverra accumsan in nisl nisi. Eget nunc scelerisque viverra mauris. Ipsum consequat nisl vel
-        pretium. Semper risus in hendrerit gravida rutrum quisque. Leo in vitae turpis massa.
-      </div>
     </div>
   </div>
 
