--- a/pages/blog.html
+++ b/pages/blog.html
@@ -102,7 +102,13 @@
       <div id="texttest">
         Studio aan zee is the public studio of museum Beelden Aan Zee. Led by Johan Tahon, a sculptor who built his studio there for a year, children and grownups can experience and participate in all aspects of sculpture. The room is divided into three pieces. There is the lounge, the workplace and the artist studio (which is divided by a small stage.) In the corner is a video playing (Takes 12:46) where we can see Johan Tahon and the conservator of education, Marlies Nijkamp, talk. The artist talks about how a studio is a space where there is distance to reality and is highly personal. The coffee corner of Studio aan Zee really adds to this thought, where the parents can see their children creating in the studio with the given materials, magic sand, non dryable clay and markers with coloring pages. The studio on its own (I haven’t seen the workshops that are given there) doesn’t compare to the big promises they made in the video. The alleged experimental character of the studio is only shown in a way that it seems like they have no clue of how to let the audience participate on their own.
 
-      Tom, Kuba and I also tried to work there. After we played with the toys displayed, a woman came to clean up the white Ikea tables with a wet cloth. If you want to let the audience participate in the making of a sculpture, then please try to make it inviting and let is know that it’s okay to make a mess. 
+      Tom, Kuba and I also tried to work there. After we played with the toys displayed, a woman came to clean up the white Ikea tables with a wet cloth. If you want to let the audience participate in the making of a sculpture, then please try to make it inviting and let is know that it’s okay to make a mess.
+      <img  src="../images/blog/beeldenaanzee1.jpg" alt="art image 1">
+      <p>Studio</p>
+      <img  src="../images/blog/beeldenaanzee2.jpg" alt="art image 1">
+      <p>Workshop</p>
+      <img  src="../images/blog/beeldenaanzee3.jpg" alt="art image 1">
+      <p>Sincerity</p>
       </div>
 
     </div>
